@@ -46,6 +46,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
   - setuptools 67.8.0 -> removed
 - [TLS] Update default parameters for accepted TLS versions
 ### Fixed
+- [API_PARSER] [CSC_DOMAINMANAGER] Correctly handle log stagnation and query interval
 - [PKG_UPGRADE] Avoid trying to launch upgrade scripts when node is not bootstrapped
 - [GUI] [ACLS] Improve 'Used by' presentation of Wokrflows using ACLs
 - [GUI] [FRONTEND] Prevent mode modification if Frontend is linked to a Workflow/IDP
